--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(ggplot2,theme)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,extract2)
+importFrom(matrixLaplacian,matrixLaplacian)
 importFrom(proxy,simil)
 importFrom(purrr,transpose)
 importFrom(rlang,.data)
