Add missing deps

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,6 +46,10 @@ RoxygenNote: 7.1.2
 Imports:
     stats,
     tidyverse,
+    tidyr,
+    purrr,
+    tibble,
+    glue,
     tidygraph,
     igraph,
     proxy,
@@ -53,8 +57,6 @@ Imports:
     magrittr,
     ggplot2,
     ggraph,
-    tidyr,
-    glue,
     rlang,
     progress,
     Matrix,
