--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,theme)
 importFrom(glue,glue_collapse)
+importFrom(keras,keras_model_custom)
+importFrom(keras,optimizer_adam)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,extract2)
 importFrom(matrixLaplacian,matrixLaplacian)
