Export jaccard function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(edgenet)
 export(family)
 export(gaussian)
 export(generate_similarity_matrix)
+export(jaccard)
 export(pareg)
 export(similarity_sample)
 export(transform_y)
