--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(gaussian)
 export(generate_similarity_matrix)
 export(jaccard)
 export(pareg)
+export(plot_pareg_with_args)
 export(similarity_sample)
 export(transform_y)
 import(dplyr)
