Make ggplot2 import explicit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(plot_pareg_with_args)
 export(similarity_sample)
 export(transform_y)
 import(dplyr)
+import(ggplot2)
 import(ggraph)
 import(progress)
 import(tensorflow)
@@ -35,10 +36,6 @@ importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
-importFrom(ggplot2,aes)
-importFrom(ggplot2,coord_fixed)
-importFrom(ggplot2,element_rect)
-importFrom(ggplot2,theme)
 importFrom(glue,glue_collapse)
 importFrom(keras,keras_model_custom)
 importFrom(keras,optimizer_adam)
