Integrate netReg's cross-validation code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(beta_phi_lm)
 export(beta_phi_var)
 export(compute_term_similarities)
 export(create_model_df)
+export(cv.edgenet)
 export(edgenet)
 export(family)
 export(gaussian)
