Comprehensive improvements of GitHub Actions Workflows and R package
* Install Tensorflow in check-bioc workflow
* Replace custom laplacian_ function with matrixLaplacian::matrixLaplacian
* Add missing dependencies to DESCRIPTION
* Remove unused response families from code examples
* Fix test suite (test-pareg, test-utils, test-misc)
* Document pvalue_threshold parameter
* Export jaccard function
* Use proper signature in plot.pareg function
* Simplify lintr GA workflow (doesn't require installation of whole R package)
* Lint whole directory instead of only package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,12 +40,16 @@ Suggests:
     mgsa,
     topGO,
     msigdbr,
-    Matrix
+    betareg
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
 Imports:
     stats,
     tidyverse,
+    tidyr,
+    purrr,
+    tibble,
+    glue,
     tidygraph,
     igraph,
     proxy,
@@ -53,8 +57,9 @@ Imports:
     magrittr,
     ggplot2,
     ggraph,
-    tidyr,
-    glue,
     rlang,
     progress,
-    Matrix
+    Matrix,
+    matrixLaplacian,
+    keras,
+    methods
