--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,13 @@ export(edgenet)
 export(family)
 export(gaussian)
 export(generate_similarity_matrix)
+export(jaccard)
 export(pareg)
+export(plot_pareg_with_args)
 export(similarity_sample)
 export(transform_y)
 import(dplyr)
+import(ggplot2)
 import(ggraph)
 import(progress)
 import(tensorflow)
@@ -34,13 +37,12 @@ importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
-importFrom(ggplot2,aes)
-importFrom(ggplot2,coord_fixed)
-importFrom(ggplot2,element_rect)
-importFrom(ggplot2,theme)
 importFrom(glue,glue_collapse)
+importFrom(keras,keras_model_custom)
+importFrom(keras,optimizer_adam)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,extract2)
+importFrom(matrixLaplacian,matrixLaplacian)
 importFrom(proxy,simil)
 importFrom(purrr,transpose)
 importFrom(rlang,.data)
