--- a/inst/scripts/config/config.yaml
+++ b/inst/scripts/config/config.yaml
@@ -2,18 +2,22 @@
 
 # `null` will execut all methods
 # list of strings will execute selected methods
-method_list: null
+method_list:
+    - single_term_methods
+    - mgsa
+    - topGO
+    - pareg_ng
 
 term_filter:
     min_size: null
     max_size: null
     sample_num: null
 
-replicate_count: 100
+replicate_count: 10
 
 parameters:
-    similarityfactor: [0, 0.25, 0.5, 0.75, 1]
-    ontermcount: [1, 5, 10, 50, 100]
-    siggenescaling: ["membercount", 0.1, 0.001]
+    similarityfactor: [0.5]
+    ontermcount: [5]
+    siggenescaling: [0.1]
 
 params_path: config/params.csv
