Implement overlap coefficient similarity measure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(family)
 export(gaussian)
 export(generate_similarity_matrix)
 export(jaccard)
+export(overlap_coefficient)
 export(pareg)
 export(plot_pareg_with_args)
 export(similarity_sample)
