--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,9 @@ Authors@R:
             comment = c(ORCID = "0000-0002-4166-4343")
         )
     )
-Description: This package uses a regularized regression to compute pathway enrichments for gene sets while accounting for inter-pathway relations.
+Description: Compute pathway enrichment scores while accounting for term-term relations.
+    This package uses a regularized multiple linear regression to regress differential expression p-values obtained from multi-condition experiments on a pathway membership matrix.
+    By doing so, it is able to incorporate additional biological knowledge into the enrichment analysis and to estimate pathway enrichment scores more robustly.
 URL: https://github.com/cbg-ethz/pareg
 BugReports: https://github.com/cbg-ethz/pareg/issues
 biocViews:
