--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,7 +43,8 @@ Suggests:
     mgsa,
     topGO,
     msigdbr,
-    betareg
+    betareg,
+    fgsea
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
 Imports:
