Use nloptr::bobyqa for optimization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(transform_y)
 import(dplyr)
 import(ggplot2)
 import(ggraph)
+import(nloptr)
 import(progress)
 import(tensorflow)
 import(tidyr)
