Add pareg_network_cv to regularization_parameter benchmark

--- a/inst/scripts/resources/multi_config_workflow/config_regularization_parameter/config.yaml
+++ b/inst/scripts/resources/multi_config_workflow/config_regularization_parameter/config.yaml
@@ -8,6 +8,7 @@ method_list:
     - pareg_network_100
     - pareg_network_1000
     - pareg_network_10000
+    - pareg_network_cv
 
 term_filter:
     min_size: null
