Fix package imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,10 +51,13 @@ importFrom(purrr,transpose)
 importFrom(rlang,.data)
 importFrom(stats,binomial)
 importFrom(stats,coef)
+importFrom(stats,cor)
 importFrom(stats,gaussian)
+importFrom(stats,runif)
 importFrom(tensorflow,tf)
 importFrom(tfprobability,tfd_bernoulli)
 importFrom(tfprobability,tfd_beta)
+importFrom(tfprobability,tfp)
 importFrom(tibble,rownames_to_column)
 importFrom(tidygraph,activate)
 importFrom(tidygraph,as_tbl_graph)
