Improve readability of network plot labels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(matrixLaplacian,matrixLaplacian)
 importFrom(proxy,simil)
 importFrom(purrr,transpose)
 importFrom(rlang,.data)
+importFrom(shadowtext,geom_shadowtext)
 importFrom(stats,binomial)
 importFrom(stats,coef)
 importFrom(stats,cor)
