Add ability to plot results using enrichplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as.data.frame,pareg)
 S3method(coef,cv.edgenet)
 S3method(coef,edgenet)
 S3method(plot,pareg)
+export(as_enrichplot_object)
 export(bernoulli)
 export(beta)
 export(beta_phi_lm)
@@ -35,9 +36,11 @@ importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
+importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(glue,glue_collapse)
@@ -47,6 +50,7 @@ importFrom(magrittr,"%<>%")
 importFrom(magrittr,extract2)
 importFrom(matrixLaplacian,matrixLaplacian)
 importFrom(proxy,simil)
+importFrom(purrr,pluck)
 importFrom(purrr,transpose)
 importFrom(rlang,.data)
 importFrom(shadowtext,geom_shadowtext)
