--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(keras,optimizer_adam)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,extract2)
 importFrom(matrixLaplacian,matrixLaplacian)
+importFrom(methods,new)
 importFrom(proxy,simil)
 importFrom(purrr,pluck)
 importFrom(purrr,transpose)
