--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,8 @@ Suggests:
     ComplexHeatmap,
     GGally,
     ggsignif,
-    circlize
+    circlize,
+    enrichplot
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
 Imports:
