Properly import DOSE::enrichResult class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ import(progress)
 import(tensorflow)
 import(tidyr)
 import(tidyverse)
+importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
