Make it possible to use enrichplot::pairwise_termsim to compute similarities and subsequently plot with enrichplot::emapplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,10 +61,12 @@ importFrom(stats,coef)
 importFrom(stats,cor)
 importFrom(stats,gaussian)
 importFrom(stats,runif)
+importFrom(stringr,str_c)
 importFrom(tensorflow,tf)
 importFrom(tfprobability,tfd_bernoulli)
 importFrom(tfprobability,tfd_beta)
 importFrom(tfprobability,tfp)
+importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
 importFrom(tidygraph,activate)
 importFrom(tidygraph,as_tbl_graph)
