Add ggnewscale to Suggests and update man pages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,8 @@ Suggests:
     GGally,
     ggsignif,
     circlize,
-    enrichplot
+    enrichplot,
+    ggnewscale
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
 Imports:
