--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,9 @@ importFrom(dplyr,rename)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
+importFrom(furrr,future_pmap_dfr)
+importFrom(future,multisession)
+importFrom(future,plan)
 importFrom(glue,glue_collapse)
 importFrom(keras,keras_model_custom)
 importFrom(keras,optimizer_adam)
