--- a/inst/scripts/workflow/Snakefile
+++ b/inst/scripts/workflow/Snakefile
@@ -4,8 +4,14 @@ import pandas as pd
 from snakemake.utils import Paramspace
 
 
-# setup config
+# setup workflow
 configfile: "config/config.yaml"
+
+if not config["subworkflow_run"]:
+    # do not install package multiple times when run as subworkflow
+    # package installation is needed for multiprocessing
+    onstart:
+        shell("Rscript -e 'devtools::install(quick = TRUE, dependencies = FALSE)'")
 
 
 # method selection
