--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,38 +22,43 @@ export(pareg)
 export(plot_pareg_with_args)
 export(similarity_sample)
 export(transform_y)
-import(dplyr)
-import(ggplot2)
-import(ggraph)
-import(nloptr)
-import(progress)
-import(tensorflow)
-import(tidyr)
-import(tidyverse)
 importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
+importFrom(dplyr,ends_with)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_at)
+importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
+importFrom(dplyr,rename_at)
+importFrom(dplyr,right_join)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
+importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(furrr,future_pmap_dfr)
 importFrom(future,multisession)
 importFrom(future,plan)
+importFrom(ggraph,ggraph)
 importFrom(glue,glue_collapse)
+importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(keras,keras_model_custom)
 importFrom(keras,optimizer_adam)
+importFrom(keras,shape)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,extract2)
 importFrom(matrixLaplacian,matrixLaplacian)
 importFrom(methods,new)
+importFrom(nloptr,bobyqa)
+importFrom(progress,progress_bar)
 importFrom(proxy,simil)
 importFrom(purrr,pluck)
 importFrom(purrr,transpose)
@@ -75,3 +80,4 @@ importFrom(tidygraph,activate)
 importFrom(tidygraph,as_tbl_graph)
 importFrom(tidygraph,mutate)
 importFrom(tidyr,extract)
+importFrom(tidyr,pivot_wider)
