More import fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,14 +26,17 @@ importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,ends_with)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
+importFrom(dplyr,n)
 importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
@@ -42,18 +45,29 @@ importFrom(dplyr,right_join)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
+importFrom(dplyr,tally)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(furrr,future_pmap_dfr)
 importFrom(future,multisession)
 importFrom(future,plan)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_fixed)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,scale_color_gradient2)
+importFrom(ggplot2,scale_size)
+importFrom(ggplot2,theme)
+importFrom(ggraph,geom_edge_link)
+importFrom(ggraph,geom_node_point)
 importFrom(ggraph,ggraph)
+importFrom(ggraph,scale_edge_alpha)
 importFrom(glue,glue_collapse)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(keras,keras_model_custom)
 importFrom(keras,optimizer_adam)
 importFrom(keras,shape)
 importFrom(magrittr,"%<>%")
+importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
 importFrom(matrixLaplacian,matrixLaplacian)
 importFrom(methods,new)
@@ -79,5 +93,6 @@ importFrom(tibble,rownames_to_column)
 importFrom(tidygraph,activate)
 importFrom(tidygraph,as_tbl_graph)
 importFrom(tidygraph,mutate)
+importFrom(tidyr,expand_grid)
 importFrom(tidyr,extract)
 importFrom(tidyr,pivot_wider)
