Another round of dependency fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,7 +54,9 @@ importFrom(future,plan)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
+importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_color_gradient2)
+importFrom(ggplot2,scale_colour_continuous)
 importFrom(ggplot2,scale_size)
 importFrom(ggplot2,theme)
 importFrom(ggraph,geom_edge_link)
@@ -90,6 +92,7 @@ importFrom(tfprobability,tfd_beta)
 importFrom(tfprobability,tfp)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
+importFrom(tibble,tibble)
 importFrom(tidygraph,activate)
 importFrom(tidygraph,as_tbl_graph)
 importFrom(tidygraph,mutate)
