--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Suggests:
     ggsignif,
     circlize,
     enrichplot,
-    ggnewscale
+    ggnewscale,
+    tidyverse
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
 Imports:
