Use workflow.source_path instead of srcdir

--- a/inst/scripts/workflow/Snakefile
+++ b/inst/scripts/workflow/Snakefile
@@ -19,7 +19,7 @@ if not config["subworkflow_run"]:
 # method selection
 if config["method_list"] is None:
     (method_list,) = glob_wildcards(
-        srcdir("../resources/method_definitions/{method}.R")
+        workflow.source_path("../resources/method_definitions/{method}.R")
     )
 else:
     method_list = config["method_list"]
@@ -99,7 +99,7 @@ rule run_method:
     params:
         params=paramspace.instance,
         script_name=lambda wildcards, input: input.script,
-        setup_code_fname=srcdir("scripts/model_setup_code.R"),
+        setup_code_fname=workflow.source_path("scripts/model_setup_code.R"),
     threads: lambda wildcards: (32 if "cv" in wildcards.method else 2)
     resources:
         mem_mb=lambda wildcards: (1_000 if "cv" in wildcards.method else 10_000),
