--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,11 +54,13 @@ importFrom(future,plan)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
+importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_color_gradient2)
 importFrom(ggplot2,scale_colour_continuous)
 importFrom(ggplot2,scale_size)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
 importFrom(ggraph,geom_edge_link)
 importFrom(ggraph,geom_node_point)
 importFrom(ggraph,ggraph)
