Properly import '%as%' from reticulate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ importFrom(progress,progress_bar)
 importFrom(proxy,simil)
 importFrom(purrr,pluck)
 importFrom(purrr,transpose)
+importFrom(reticulate,"%as%")
 importFrom(rlang,.data)
 importFrom(shadowtext,geom_shadowtext)
 importFrom(stats,binomial)
