--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as.data.frame,pareg)
 S3method(coef,cv.edgenet)
 S3method(coef,edgenet)
 S3method(plot,pareg)
+export(as_dense_sim)
 export(as_enrichplot_object)
 export(bernoulli)
 export(beta)
@@ -24,6 +25,7 @@ export(similarity_sample)
 export(transform_y)
 importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
+importFrom(Matrix,forceSymmetric)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
