--- a/.github/workflows/lintr.yaml
+++ b/.github/workflows/lintr.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Install lintr
         run: |
           install.packages("remotes")
-          remotes::install_github("r-lib/lintr")
+          remotes::install_github("r-lib/lintr", ref = "0794ee10b212cf7205963750cf3c73dfd89e2d33")
         shell: Rscript {0}
 
       - name: Lint
