--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
 importFrom(Matrix,forceSymmetric)
 importFrom(dplyr,all_of)
+importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,desc)
@@ -39,7 +40,6 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,n)
-importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_at)
