Fix usage of furrr_options

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,tally)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
+importFrom(furrr,furrr_options)
 importFrom(furrr,future_pmap_dfr)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
