--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_color_gradient2)
 importFrom(ggplot2,scale_colour_continuous)
+importFrom(ggplot2,scale_fill_continuous)
 importFrom(ggplot2,scale_size)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
