Parallelize CV with doParallel instead of furrr
This fixes a mysterious memory explosion on the cluster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(transform_y)
 importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
 importFrom(Matrix,forceSymmetric)
+importFrom(doParallel,"%dopar%")
+importFrom(doParallel,foreach)
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
@@ -50,8 +52,6 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,tally)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
-importFrom(furrr,furrr_options)
-importFrom(furrr,future_pmap_dfr)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
