--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,8 +26,7 @@ export(transform_y)
 importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
 importFrom(Matrix,forceSymmetric)
-importFrom(doParallel,"%dopar%")
-importFrom(doParallel,foreach)
+importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
@@ -52,6 +51,8 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,tally)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
