Add proper logging

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,11 +68,16 @@ importFrom(ggraph,geom_edge_link)
 importFrom(ggraph,geom_node_point)
 importFrom(ggraph,ggraph)
 importFrom(ggraph,scale_edge_alpha)
+importFrom(glue,glue)
 importFrom(glue,glue_collapse)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(keras,keras_model_custom)
 importFrom(keras,optimizer_adam)
 importFrom(keras,shape)
+importFrom(logger,INFO)
+importFrom(logger,log_debug)
+importFrom(logger,log_threshold)
+importFrom(logger,log_trace)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
