Improve setup of parallelized CV

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
 importFrom(methods,new)
 importFrom(nloptr,bobyqa)
+importFrom(parallel,makeCluster)
 importFrom(progress,progress_bar)
 importFrom(proxy,simil)
 importFrom(purrr,pluck)
