Fix logger imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,7 +74,7 @@ importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(keras,keras_model_custom)
 importFrom(keras,optimizer_adam)
 importFrom(keras,shape)
-importFrom(logger,INFO)
+importFrom(logger,TRACE)
 importFrom(logger,log_debug)
 importFrom(logger,log_threshold)
 importFrom(logger,log_trace)
