--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ importFrom(ggraph,geom_node_point)
 importFrom(ggraph,ggraph)
 importFrom(ggraph,scale_edge_alpha)
 importFrom(glue,glue_collapse)
+importFrom(hms,as_hms)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(keras,keras_model_custom)
 importFrom(keras,optimizer_adam)
