Implement own cluster (LSF) parallelization engine

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,ends_with)
@@ -68,6 +69,7 @@ importFrom(ggraph,geom_edge_link)
 importFrom(ggraph,geom_node_point)
 importFrom(ggraph,ggraph)
 importFrom(ggraph,scale_edge_alpha)
+importFrom(glue,glue)
 importFrom(glue,glue_collapse)
 importFrom(hms,as_hms)
 importFrom(igraph,graph_from_adjacency_matrix)
@@ -97,10 +99,12 @@ importFrom(stats,cor)
 importFrom(stats,gaussian)
 importFrom(stats,runif)
 importFrom(stringr,str_c)
+importFrom(stringr,str_match)
 importFrom(tensorflow,tf)
 importFrom(tfprobability,tfd_bernoulli)
 importFrom(tfprobability,tfd_beta)
 importFrom(tfprobability,tfp)
+importFrom(tibble,add_row)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
