--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ importFrom(keras,optimizer_adam)
 importFrom(keras,shape)
 importFrom(logger,TRACE)
 importFrom(logger,log_debug)
+importFrom(logger,log_error)
 importFrom(logger,log_threshold)
 importFrom(logger,log_trace)
 importFrom(magrittr,"%<>%")
