Small fixes for integration of custom LSF parallelization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(transform_y)
 importClassesFrom(DOSE,enrichResult)
 importFrom(Matrix,bdiag)
 importFrom(Matrix,forceSymmetric)
+importFrom(devtools,load_all)
 importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
