--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,6 @@ Suggests:
     testthat (>= 2.1.0),
     BiocStyle,
     formatR,
-    devtools,
     plotROC,
     PRROC,
     mgsa,
@@ -75,4 +74,5 @@ Imports:
     stringr,
     reticulate,
     logger,
-    hms
+    hms,
+    devtools
