--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(bernoulli)
 export(beta)
 export(beta_phi_lm)
 export(beta_phi_var)
+export(cluster_apply)
 export(compute_term_similarities)
 export(create_model_df)
 export(cv_edgenet)
