Make job status check more robust

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(logger,log_debug)
 importFrom(logger,log_error)
 importFrom(logger,log_threshold)
 importFrom(logger,log_trace)
+importFrom(logger,log_warn)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
